<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vectornav</name>
  <version>3.0.0</version>
  <description>ROS interface for the VectorNav INS/GPS</description>

  <maintainer email="rmartin@robotnik.es">Rafael Martin</maintainer>

  <license>MIT</license>

  <!-- <url type="website">http://ros.org/wiki/vectornav</url> -->

  <author email="dereck@gmail.com">Dereck Wonnacott</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_srvs</depend>

  <depend version_gte="1.2.0">rosidl_adapter</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Maintainer Note:
      The vnccpplib directory is from http://www.vectornav.com/support/downloads
      I removed the version string from the directory name, sanitized file
      permissions, and removed all but the src and include directories.
   -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
